Inward -> inward report ->All summaries ->BHT Inward charge categor and  Inward -> inward report ->All summaries ->BHT Inward charge category Signed-off-by: ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/inward/inward_report_bht_inward_charge_category.xhtml
+++ b/src/main/webapp/inward/inward_report_bht_inward_charge_category.xhtml
@@ -53,7 +53,7 @@
                                 <f:facet name="header">
                                     <h:outputLabel value="BHT No"/> 
                                 </f:facet>
-                                <h:outputLabel   value="#{bip.patientEncounter.bhtNo}"/>
+                                <h:outputLabel   value="#{bip.bill.patientEncounter.bhtNo}"/>
                             </p:column>
                             <p:column headerText="Inward Charge Type">
                                 <f:facet name="header">
