--- a/src/main/webapp/hr/hr_report_staff_salary_component.xhtml
+++ b/src/main/webapp/hr/hr_report_staff_salary_component.xhtml
@@ -55,7 +55,8 @@
                             <hr:completePaySheetComponent value="#{hrReportController.reportKeyWord.paysheetComponent}"/>
                             <h:outputLabel value="Bank : "/>
                             <hr:completeBank value="#{hrReportController.reportKeyWord.institutionBank}"/>
-
+                            <h:outputLabel value="Adjested Components"/>
+                            <p:selectBooleanCheckbox value="#{hrReportController.reportKeyWord.bool1}" />
                         </h:panelGrid>
 
                         <p:commandButton ajax="false" value="Process" action="#{hrReportController.createStaffSalaryComponent()}"/>
@@ -102,7 +103,7 @@
                                     <p:outputLabel value="#{ss.staffSalary.staff.codeInterger}" >
                                     </p:outputLabel>
                                 </p:column>
-                                <p:column headerText="Emp Name">
+                                <p:column headerText="Emp Name" style="text-wrap: avoid; text-overflow: clip; white-space: nowrap;">
                                     <f:facet name="header">
                                         <h:outputLabel value="Emp Name"/>
                                     </f:facet>
@@ -168,6 +169,28 @@
                                     </f:facet>
                                     <p:outputLabel value="#{ss.etfCompanyValue + ss.epfCompanyValue + ss.epfValue + ss.componantValue}">
                                         <f:convertNumber pattern="#,##0.00" />
+                                    </p:outputLabel>
+                                </p:column>
+                                <p:column headerText="Editer" rendered="#{hrReportController.reportKeyWord.bool1}" style="text-wrap: avoid; text-overflow: clip; white-space: nowrap;">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Editer"/>
+                                    </f:facet>
+                                    <p:outputLabel value="#{ss.lastEditor.webUserPerson.name}">
+                                    </p:outputLabel>
+                                </p:column>
+                                <p:column headerText="Comment" rendered="#{hrReportController.reportKeyWord.bool1}" style="text-wrap: avoid; text-overflow: clip; white-space: nowrap;">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Comment"/>
+                                    </f:facet>
+                                    <p:outputLabel value="#{ss.comments}">
+                                    </p:outputLabel>
+                                </p:column>
+                                <p:column headerText="Edited At" rendered="#{hrReportController.reportKeyWord.bool1}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Edited At"/>
+                                    </f:facet>
+                                    <p:outputLabel value="#{ss.lastEditedAt}">
+                                        <f:convertDateTime pattern="yyyy MMM dd" />
                                     </p:outputLabel>
                                 </p:column>
                                 <f:facet name="footer">
