--- a/src/main/webapp/collecting_centre/bill.xhtml
+++ b/src/main/webapp/collecting_centre/bill.xhtml
@@ -135,7 +135,10 @@
                                                                             var="pta" itemLabel="#{pta.name}" styleClass="shortinput"
                                                                             itemValue="#{pta}" forceSelection="true" 
                                                                             value="#{collectingCentreBillController.newPatient.person.area}" ></p:autoComplete>
-                                                            <p:inputMask placeholder="NIC" mask="999999999V" value="#{collectingCentreBillController.newPatient.person.nic}" />
+                                                            <!--<p:inputMask placeholder="NIC" mask="999999999V" value="#{collectingCentreBillController.newPatient.person.nic}" />-->
+                                                            <p:inputText placeholder="NIC" maxlength="12" value="#{collectingCentreBillController.newPatient.person.nic}"/>
+
+                                                        
                                                         </td>
 
                                                     </tr>
